--- a/devin/comparing-cody-vs-devin.mdx
+++ b/devin/comparing-cody-vs-devin.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Compare Sourcegraph Cody and Devin - two powerful AI coding as
 canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-devin'
 ---
 
-As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Devin stand out as two prominent solutions in the market. Both tools offer comprehensive AI assistance for developers, but Devin distinguishes itself with autonomous capabilities while Cody focuses on enhanced context-aware assistance. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, Sourcegraph Cody and Devin stand out as two prominent solutions in the market. Both offer comprehensive AI assistance for developers, but Devin distinguishes itself with autonomous capabilities while Cody focuses on enhanced context-aware assistance. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -38,7 +40,7 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 Cody provides intelligent code completion with context-aware suggestions based on your codebase. It excels at maintaining consistent coding patterns and reducing common errors through its understanding of the entire repository context. The system offers both single-line and multi-line completions, working seamlessly across multiple programming languages.
 
 ### Devin
-Devin takes a more autonomous approach to code completion, capable of writing entire functions and applications independently. It can not only complete code but also run and test it automatically. The system can handle complex tasks like building web applications and fixing CI failures, making it more of an autonomous developer than just a completion tool.
+Devin takes a more autonomous approach to code completion. Capable of writing entire functions and applications independently, it can not only complete code, but can also run and test it automatically. The system can also handle complex tasks like building web applications and fixing CI failures, making it more of an autonomous developer than just a code completion tool.
 
 ## AI Chat Capabilities
 
@@ -54,7 +56,7 @@ Devin offers chat capabilities through multiple channels, including Slack integr
 Cody implements multiple context retrieval methods, including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It maintains configurable context window sizes and offers enterprise-level features for accessing multiple repositories. The system excels at understanding code relationships and providing relevant suggestions based on the entire codebase.
 
 ### Devin
-Devin's context awareness extends beyond code to include development environment states through its Machine Snapshots feature. It can maintain knowledge of entire codebases, previous interactions, and development patterns. The system can work with multiple contexts simultaneously through its MultiDevin feature and stores relevant development context for future use.
+Devin's context awareness extends beyond code to include development environment states through its Machine Snapshots feature. It can maintain knowledge of entire codebases, previous interactions, and development patterns. Thanks to its MultiDevin feature, the system can work with multiple contexts simultaneously, and is capable of storing relevant development context for future use.
 
 ## Privacy and Security
 
@@ -62,16 +64,18 @@ Devin's context awareness extends beyond code to include development environment
 While specific privacy details aren't extensively documented, Cody offers enhanced security measures for enterprise environments, including repository-level permissions and customizable settings. Enterprise features suggest robust security controls for business environments.
 
 ### Devin
-Devin provides comprehensive security features including SOC 2 Type II certification, data encryption in transit and at rest, and optional VPC deployment. It offers granular access controls, multi-factor authentication, and secure credential sharing via Secrets Manager. Enterprise customers can implement custom data retention policies and training opt-out options.
+Devin provides comprehensive security features including SOC 2 Type II certification, data encryption in transit and at rest, and optional VPC deployment. It offers granular access controls, multi-factor authentication, and secure credential sharing via Secrets Manager. Enterprise customers can also implement custom data retention policies and training opt-out options.
 
 ## Pricing
 
 ### Sourcegraph Cody
 - **Free/Pro Tier**
+  - Pro $9 per month
   - Single repository access
   - Basic IDE integration
   - Standard chat functionality
 - **Enterprise Tier**
+  - $19 per user/month
   - Multi-repository support
   - Enhanced features across all IDEs
   - Team collaboration capabilities
@@ -79,21 +83,22 @@ Devin provides comprehensive security features including SOC 2 Type II certifica
 
 ### Devin
 - **Teams Plan**
+  - $500 per month
   - Unlimited seats
   - Full Slack integration
   - ACU allocation
   - Shared workspace features
 - **Enterprise**
+  - Custom pricing
   - Custom VPC deployment
   - SSO with Okta
   - Advanced analytics
   - Custom data retention policies
-- **Technical Preview**
-  - Individual access
-  - Weekly spot releases
 
 ## Conclusion
 
-Sourcegraph Cody and Devin represent two different approaches to AI-assisted development. Cody excels as a context-aware coding assistant, focusing on intelligent code completion and codebase understanding, making it ideal for developers who want enhanced productivity while maintaining control over their development process. Its strong IDE integration and multi-repository support in the enterprise tier make it particularly suitable for large development teams.
+Sourcegraph Cody and Devin represent two different approaches to AI programming and assisted development. Cody excels as a context-aware coding assistant, focusing on intelligent code completion and codebase understanding, making it ideal for developers who want enhanced productivity while maintaining control over their development process. Its strong IDE integration and multi-repository support in the enterprise tier make it particularly suitable for large development teams.
 
-Devin, on the other hand, positions itself as an autonomous AI teammate capable of handling complete development tasks independently. With features like terminal access, browser integration, and the ability to execute complex development workflows, it's better suited for teams looking to automate significant portions of their development process. While potentially more powerful in terms of automation, it may require more oversight and clear success criteria for complex tasks. The choice between the two will largely depend on whether you need an intelligent assistant (Cody) or an autonomous developer (Devin) in your workflow.
+Devin, on the other hand, positions itself as an autonomous AI teammate capable of handling complete development tasks independently. With features like terminal access, browser integration, and the ability to execute complex development workflows, it's better suited for teams looking to automate significant portions of their development process. While potentially more powerful in terms of automation, it may require more oversight and clear success criteria for complex tasks. 
+
+The choice between the two will largely depend on whether you need an intelligent assistant (Cody) or an autonomous developer (Devin) in your workflow.
