--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -69,14 +69,23 @@ Devin offers enterprise-grade security with SOC 2 Type II certification, data en
 ## Pricing
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits and 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits and 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits and 1500 Flow Action credits monthly
-- **Pro Ultimate Plan**: Unlimited User Prompt credits and 3000 Flow Action credits monthly
+- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
+- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
+- **Pro Plan**: $12/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: Custom pricing - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ### Devin
-- **Teams Plan**: Includes unlimited seats, Slack integration, and ACU allocation
-- **Enterprise Features**: Includes access to Devin Enterprise, Custom Devin and MultiDevin, custom VPC deployment, and a dedicated account team
+- **Teams Plan**:
+  - $500 per month
+  - Unlimited seats
+  - ACU allocation
+  - Slack integration
+  - Shared workspace features
+- **Enterprise Plan**:
+  - Custom pricing
+  - SSO with Okta
+  - VPC deployment
+  - Advanced analytics
 
 ## Conclusion
 
