codeium pricing update

--- a/others/comparing-codeium-vs-qodo.mdx
+++ b/others/comparing-codeium-vs-qodo.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
       ['JetBrains Support', '✗', '✓'],
       ['NVIM Support', '✗', '✗'],
       ['Models Supported', 'GPT-4o, Claude 3.5', 'GPT-4, Claude 3.5, Gemini'],
-      ['Pricing', 'Free, Pro $15/mo, Ultimate $39/mo', 'Free, Team $19/mo, Enterprise']
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $60/mo', 'Free, Team $19/mo, Enterprise']
    ]
 
 ## Code Completion
@@ -67,10 +67,10 @@ Qodo Gen implements strong encryption for all transmitted code snippets and prov
 ## Pricing
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits and 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits and 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits and 1500 Flow Action credits monthly
-- **Pro Ultimate Plan**: Unlimited User Prompt credits and 3000 Flow Action credits monthly
+- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
+- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ### Qodo Gen
 - **Free Tier**: Basic features for individual developers
