--- a/tabnine/comparing-tabnine-vs-codeium.mdx
+++ b/tabnine/comparing-tabnine-vs-codeium.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'Universal and Custom Models', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -77,8 +77,8 @@ Codeium implements end-to-end encryption and allows users to opt out of code sni
 ### Codeium
 - **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
 - **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits, 1500 Flow Action credits monthly
-- **Pro Ultimate Plan**: Unlimited User Prompt credits, 3000 Flow Action credits monthly
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ## Conclusion
 
