--- a/cody/comparing-cody-vs-codeium.mdx
+++ b/cody/comparing-cody-vs-codeium.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free tier + Pro $9/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
+    ['Pricing', 'Free tier + Pro $9/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -78,18 +78,10 @@ Codeium emphasizes user privacy with configurable data sharing options. Users ca
   - Custom deployment options
 
 ### Codeium
-- **Free Plan**
-  - 5 User Prompt credits
-  - 5 Flow Action credits
-- **Free Trial**
-  - 50 User Prompt credits
-  - 200 Flow Action credits (2 weeks)
-- **Pro Plan**
-  - 500 User Prompt credits/month
-  - 1500 Flow Action credits/month
-- **Pro Ultimate Plan**
-  - Unlimited User Prompt credits
-  - 3000 Flow Action credits/month
+- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
+- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ## Conclusion
 
