--- a/copilot/comparing-copilot-vs-codeium.mdx
+++ b/copilot/comparing-copilot-vs-codeium.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'GPT-4, Custom Models', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free, Pro $15/mo, Ultimate $39/mo']
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free, Pro $15/mo, Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -76,9 +76,8 @@ Codeium prioritizes user privacy with strong data handling policies. Users can o
 ### Codeium
 - **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
 - **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits, 1500 Flow Action credits per month
-- **Pro Ultimate Plan**: Unlimited User Prompt credits, 3000 Flow Action credits monthly
-- Additional Flex credits available for purchase
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ## Conclusion
 
