--- a/cursor/comparing-cursor-vs-codeium.mdx
+++ b/cursor/comparing-cursor-vs-codeium.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✗'],
    ['NVIM Support', '✗', '✗'],
    ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
+   ['Pricing', 'Free tier + Pro $20/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -74,8 +74,8 @@ Codeium prioritizes user privacy with clear data handling policies and the abili
 ### Codeium
 - **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
 - **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $12/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: Custom pricing - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ## Conclusion
 
