--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -31,7 +31,7 @@ This comparison will help you understand the key differences and make an informe
     ['JetBrains Support', '✗', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
     ['Models Supported', 'GPT-4o, Claude 3.5', 'Custom Cognition Models'],
-    ['Pricing', 'From $15/month individual', 'Team $500/mo, Enterprise']
+    ['Pricing', 'From $10/month individual', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
@@ -69,10 +69,10 @@ Devin offers enterprise-grade security with SOC 2 Type II certification, data en
 ## Pricing
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $12/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: Custom pricing - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**: 5 User Prompt credits and 5 Flow Action credits
+- **Free Trial**: 50 User Prompt credits and 200 Flow Action credits (2 weeks)
+- **Pro Plan**: 500 User Prompt credits and 1500 Flow Action credits monthly
+- **Pro Ultimate Plan**: Unlimited User Prompt credits and 3000 Flow Action credits monthly
 
 ### Devin
 - **Teams Plan**:
