--- a/others/comparing-codeium-vs-replit.mdx
+++ b/others/comparing-codeium-vs-replit.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
       ['JetBrains Support', '✗', 'N/A'],
       ['NVIM Support', '✗', 'N/A'],
       ['Models Supported', 'GPT-4o, Claude 3.5', 'Claude 3.5, GPT-4o'],
-      ['Pricing', 'Free, Pro $15/mo, Ultimate $39/mo', 'Free, Core $15/mo']
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $60/mo', 'Free, Core $15/mo']
    ]
 
 ## Code Completion
@@ -69,8 +69,8 @@ While specific privacy measures aren't extensively documented, Replit processes 
 ### Codeium
 - **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
 - **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits, 1500 Flow Action credits monthly
-- **Pro Ultimate Plan**: Unlimited User Prompt credits, 3000 Flow Action credits monthly
+- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
+- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
 
 ### Replit
 - **Free Plan**: Access to basic AI features and standard code completion
