--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -10,7 +10,7 @@ metaDescription: 'Comprehensive comparison of Codeium and Devin AI coding tools,
 canonicalUrl: 'https://www.greptile.com/blog/comparing-codeium-vs-devin'
 ---
 
-As AI-powered coding tools continue to reshape how we write code, Codeium and Devin stand out as two prominent code generation solutions in the market. Both offer advanced AI-powered coding assistance, but while Codeium focuses on enhancing developer productivity through intelligent code completion and chat features, Devin positions itself as a fully-fledged AI programming assistant, capable of autonomous development tasks. 
+As AI-powered coding tools continue to reshape how we write code, Codeium (https://codeium.com/) and Devin (https://devin.ai/) stand out as two prominent code generation solutions in the market. Both offer advanced AI-powered coding assistance, but while Codeium focuses on enhancing developer productivity through intelligent code completion and chat features, Devin positions itself as a fully-fledged AI programming assistant, capable of autonomous development tasks. 
 
 This comparison will help you understand the key differences and make an informed decision for your development needs.
 
@@ -31,7 +31,7 @@ This comparison will help you understand the key differences and make an informe
     ['JetBrains Support', '✗', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
     ['Models Supported', 'GPT-4o, Claude 3.5', 'Custom Cognition Models'],
-    ['Pricing', 'From $10/month individual', 'Team $500/mo, Enterprise']
+    ['Pricing', 'Free + 15/mo individual', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
@@ -69,14 +69,24 @@ Devin offers enterprise-grade security with SOC 2 Type II certification, data en
 ## Pricing
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits and 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits and 200 Flow Action credits (2 weeks)
-- **Pro Plan**: 500 User Prompt credits and 1500 Flow Action credits monthly
-- **Pro Ultimate Plan**: Unlimited User Prompt credits and 3000 Flow Action credits monthly
+- **Free Plan**: 
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+- **Free Trial**: 
+  - 50 User Prompt credits
+  - 200 Flow Action credits (2 weeks)
+- **Pro Plan**: 
+  - $15/month
+  - 500 User Prompt credits 
+  - 1500 Flow Action credits monthly
+- **Pro Ultimate Plan**: 
+  - $60/month
+  - Unlimited User Prompt credits 
+  - 3000 Flow Action credits monthly
 
 ### Devin
 - **Teams Plan**:
-  - $500 per month
+  - $500/month
   - Unlimited seats
   - ACU allocation
   - Slack integration
