--- a/devin/comparing-cursor-vs-devin.mdx
+++ b/devin/comparing-cursor-vs-devin.mdx
@@ -10,7 +10,7 @@ metaDescription: 'Compare Cursor and Devin AI features, pricing, and capabilitie
 canonicalUrl: 'https://www.greptile.com/blog/comparing-cursor-vs-devin'
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Devin stand out as two prominent solutions in the market. Both tools offer AI-powered assistance for developers, but while Cursor focuses on being an enhanced code editor with AI capabilities, Devin positions itself as a full-fledged autonomous AI teammate. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered development tools continue to reshape how we write code, Cursor (https://www.cursor.com/) and Devin (https://devin.ai/) stand out as two prominent solutions in the market. Both tools offer AI-powered assistance for developers, but while Cursor focuses on being an enhanced code editor with AI capabilities, Devin positions itself as a full-fledged autonomous AI teammate. This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
       ['JetBrains Support', '✗', 'N/A'],
       ['NVIM Support', '✗', 'N/A'],
       ['Models Supported', 'GPT-4, Claude, Custom', 'Custom Cognition Models'],
-      ['Pricing', 'Free tier + Pro $20/mo', 'Team $500/mo, Enterprise']
+      ['Pricing', 'Free tier + Pro $20/mo', 'Team $500/mo, Enterprise custom pricing']
    ]
 
 ## Code Completion
@@ -83,7 +83,7 @@ Devin maintains SOC 2 Type II certification and implements comprehensive securit
   - Advanced administration tools
 
 ### Devin
-- **Teams Plan (Custom pricing)**
+- **Teams Plan ($500/month)**
   - Unlimited seats
   - ACU allocation
   - Slack integration
